# OrionDataAnalyticsInternshipJul23-Proj2

./: .env.template  .gitignore  LICENSE  Makefile  Pillow-10.0.0-cp39-cp39-win_amd64.whl  README.md  contourpy-1.1.0-cp39-cp39-win_amd64.whl  fonttools-4.41.0-cp39-cp39-win_amd64.whl  importlib_resources-6.0.0-py3-none-any.whl  pyproject.toml
Orion2.venv/: pyvenv.cfg
Orion2.venv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
app/: Predict_Prices_💸.py  requirements.txt  streamlit_demo.py
data/final/: encoded_addr.csv  submission_RF1.csv  submission_RF2.csv
data/processed/: addresses_gecoded_by_mapboxAPI.csv  addresses_geocoded_by_geocodemaps.csv  cleaned.csv
data/raw/: address.csv
docs/: EDA.html  GeoEncode.html  ML.html  _quarto.yml  docs.html  docs.ipynb  docs.qmd
models/: 1st_model_LR.joblib
notebooks/: EDA.html  EDA.ipynb  GeoEncode.html  GeoEncode.ipynb  ML.html  ML.ipynb
src/: utils.py
