[tool.poetry]
name = "OrionDataAnalyticsInternshipJul23-Proj2"
version = "0.1.0"
description = ""
authors = ["Anshika Jain"]

[tool.poetry.dependencies]
python = "^3.9.13"
pandas = "^2.0.3"
seaborn = "^0.12.2"
geopandas = "^0.13.2"
folium = "^0.14.0"
mapbox = "^0.18.1"
tqdm = "^4.65.0"
ipywidgets = "^8.0.7"
python-dotenv = "^1.0.0"
nbformat = "^5.9.2"
nbclient = "^0.8.0"
streamlit = "^1.25.0"
joblib = "^1.3.1"
scikit-learn = "^1.3.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''


